fix tabs panel z-index on the company page added fetch  to API when user login, to get full info in tabs

--- a/containers/CompanyPage/styles.scss
+++ b/containers/CompanyPage/styles.scss
@@ -296,6 +296,7 @@
         background-color: #ffffff;
         position: sticky;
         top: 80px;
+        z-index: 1;
       }
       .middle_tabbr {
         margin-bottom: 30px;
